{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 93,
  "lineage": "f2deaeb1-7f7c-742b-b211-ca91bf2e8186",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/networkInterfaces/VM1RHEL74-nic",
            "internal_domain_name_suffix": "zz4djarauy0uhcvhwyozip3xxe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/publicIPAddresses/VM1RHEL74-publicip",
                "subnet_id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-84-43-3A",
            "name": "VM1RHEL74-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "LabAVM",
            "virtual_machine_id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Compute/virtualMachines/VM1RHEL74"
          },
          "dependencies": [
            "azurerm_public_ip.vm1_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/networkInterfaces/VM2DEBIAN-nic",
            "internal_domain_name_suffix": "zz4djarauy0uhcvhwyozip3xxe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-88-B1-34",
            "name": "VM2DEBIAN-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "LabAVM",
            "virtual_machine_id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Compute/virtualMachines/VM2DEBIAN"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "westeurope",
            "name": "nsg1",
            "resource_group_name": "LabAVM",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "LabAVM",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm1_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "vmrheldns",
            "fqdn": "vmrheldns.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/publicIPAddresses/VM1RHEL74-publicip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "168.63.106.158",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "VM1RHEL74-publicip",
            "resource_group_name": "LabAVM",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "LabAVM",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "82347cce-a620-4335-8aa7-b61d943fb7bc",
            "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "westeurope",
            "name": "vnet1",
            "resource_group_name": "LabAVM",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/f38ade84-0cba-45e3-b13f-79b651df8cfb/resourceGroups/LabAVM/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}